Fix quickscroll consistency and side effects from last attempt to do so
d471c6a fixed the iOS Safari quickscroll, but introduced several other issues.

Desktop: quickscroll overlapped scrollbar, and scrollbar was underneath the navbar.

iOS Safari: when attempting to scroll up when you were at the top, or down when you were at the bottom, it would lock up the browser for a few seconds. Also, since #app height was 100%, the browser's menu bar and navigation bar would never minimize.

This commit fixes quickscroll and as far as I can tell does not have any unwanted side effects.

--- a/client/src/components/quickScroll/style.css
+++ b/client/src/components/quickScroll/style.css
@@ -11,7 +11,6 @@
   user-select: none;
   border-radius: 5px 0 0 5px;
   transition: width 0.2s;
-  overflow: auto; /* see i#11 */
 }
 
 .scrolling {
