--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -13,8 +13,6 @@ body {
   color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  position: fixed; /* see i#11 */
-  overflow: hidden; /* see i#11 */
 }
 
 * {
@@ -22,9 +20,7 @@ body {
 }
 
 #app {
-  -webkit-overflow-scrolling: touch; /* see i#11 */
-  overflow: auto; /* see i#11 */
-  height: 100%; /* see i#11 */
+  min-height: 100%;
   padding-top: 56px;
   padding-bottom: 2%;
   background-color: #96e6a1;
